録音機能の追加

--- a/src/components/voice/voice.html
+++ b/src/components/voice/voice.html
@@ -14,9 +14,9 @@
         <button type="button" id="buttonStop" disabled>Stop</button>
     </div>
     <div>
-        <!-- <audio controls id="player"></audio> -->
+        <audio controls id="player"></audio>
     </div>
-    <script src="voice.js"></script>
+    <script src="voice.jsx"></script>
 </body>
 
 </html>
